--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </nav>
 
     <div class="container">
-        <textarea placeholder="Enter a sentence in English and we will convert it to a fun Latin version"></textarea>
+        <textarea id="input-txt" placeholder="Enter a sentence in English and we will convert it to a fun Latin version"></textarea>
         <button id="btn-translate">Translate</button>
         <div id="output-para" style="font-size: larger">Translation will be output here 👇 </div>
         <div id="output"></div>
@@ -21,7 +21,7 @@
     <footer>
         <div class="container">
             <h2>About</h2>
-            <p>Are you amongst the people who has their elite childhood during the Phineas and Ferb era ? Well, we are here to give that childhood nostalgia a little nudge :)</p>
+            <p>Are you amongst the people who had their elite childhood during the Phineas and Ferb era ? Well, we are here to give that childhood nostalgia a little nudge :)</p>
         </div>
     </footer>
 
